# rainstash-rs

./: Cargo.toml  README.md
src/: lib.rs
src/matching/: algo.rs  mod.rs
src/parser/: json.rs  manifest.rs  mod.rs
src/utils/: error.rs  mod.rs
tests/: test_object.json
