[package]
name = "rainstash-rs"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
repository = "https://github.com/FrictionlessPortals/rainstash-rs.git"
homepage = "https://github.com/FrictionlessPortals/rainstash-rs.git"
license = "MIT"
readme = "README.md"
description = "Simple library for parsing Rainstash JSON data into simple structs."
edition = "2018"

[lib]
name = "rainstash"
path = "src/lib.rs"

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
log             = "0.4"
reqwest         = "0.9"
